
<resources>
    <string name="app_name">ZimbraMail</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ZimbraMail</string>
    <string name="title_text">Zimbra Mail App</string>
    <string name="login_account_text">Account ID</string>
    <string name="login_user_text">Login</string>
    <string name="login_pass_text">Password</string>
    <string name="login_user" />
    <string name="login_pass" />
    <string name="login_server_text">Optional, put your Zimbra Server Domain</string>
    <string name="login_server" />
    <string name="login_button_text">Login</string>
    <string name="login_button_alert">Greetings @string/login_user_text</string>
    <string name="title_activity_display_message">Zimbra Message</string>
    <string name="title_activity_preference">Configuration</string>
    <string name="button_settings">Accounts Settings</string>
    <string name="category_user_data">Account Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="login_button_editprefs">Edit Preferences</string>
    <string name="login_button_showprefs">Show Preferences</string>
    <string name="login_account_summary">Set your account description</string>
    <string name="login_user_summary">Set your username [user@domain]</string>
    <string name="login_pass_summary">Write your password account</string>
    <string name="login_server_summary">Optional, write your mailserver name..</string>
    <string name="menu_exit">Exit App</string>
    <string name="title_panel_detail">panel Detail</string>
    <string name="title_panel_list">panels</string>
    <string name="button_showpanel">Show Panel</string>
</resources>